--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,27 @@
+:root {
+  --sunshine-color: rgb(254, 231, 100);
+  --coral-color: rgb(239, 100, 76);
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+
 h1 {
-  font-family: "Playfair Display", serif;
+  font-family: var(--heading-font-family);
   font-weight: bold;
+  color: var(--coral-color);
+  font-size: 96px;
+}
+
+h1:hover {
+  color: var(--sunshine-color);
+  cursor: pointer;
 }
 
 p {
-  font-family: "Poppins", sans-serif;
+  font-family: var(--default-font-family);
   font-weight: normal;
+}
+
+.hero {
+  text-align: center;
 }
