--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 :root {
   --sunshine-color: rgb(254, 231, 100);
   --coral-color: rgb(239, 100, 76);
+  --grey-color: rgb(56, 67, 74);
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
@@ -9,7 +10,9 @@ h1 {
   font-family: var(--heading-font-family);
   font-weight: bold;
   color: var(--coral-color);
-  font-size: 96px;
+  font-size: 80px;
+  letter-spacing: 0.047em;
+  text-transform: uppercase;
 }
 
 h1:hover {
@@ -17,11 +20,40 @@ h1:hover {
   cursor: pointer;
 }
 
-p {
-  font-family: var(--default-font-family);
-  font-weight: normal;
-}
-
 .hero {
   text-align: center;
+  background: rgb(254, 231, 100, 0.05);
+  padding: 100px 20px;
+}
+
+.hero h2 {
+  font-family: var(--heading-font-family);
+  font-size: 20px;
+  line-height: 2;
+  color: var(--grey-color);
+}
+
+.hero p {
+  margin: 0;
+  font-family: var(--default-font-family);
+  font-weight: normal;
+  font-size: 30px;
+}
+
+.hello {
+  font-size: 36px;
+}
+
+.btn-branding {
+  background: var(--coral-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  text-transform: capitalize;
+}
+
+.btn-branding:hover {
+  background: var(--sunshine-color);
 }
