--- a/src/styles.css
+++ b/src/styles.css
@@ -47,21 +47,21 @@ p {
   font-size: 30px;
 }
 
-.about-hero {
+.content-container {
   padding: 100px 20px;
 }
 
-.about-hero h1 {
+.content h1 {
   font-size: 64px;
   line-height: 1;
 }
 
-.about-hero h2,
+.content h2,
 p {
   font-family: var(--default-font-family);
 }
 
-.about-hero-content {
+.content {
   margin: 30px;
 }
 
@@ -104,7 +104,7 @@ p {
     margin-bottom: 40px;
   }
 
-  .about-hero {
+  .content-container {
     text-align: center;
     padding: 0;
   }
