--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,20 @@
   --default-font-family: "Poppins", sans-serif;
 }
 
-h1 {
+body {
+  font-family: var(--default-font-family);
+}
+
+h1,
+h2,
+h2,
+h4,
+h5,
+h6 {
   font-family: var(--heading-font-family);
+}
+
+h1 {
   font-weight: bold;
   color: var(--coral-color);
   font-size: 80px;
@@ -34,7 +46,6 @@ p {
 }
 
 .hero h2 {
-  font-family: var(--heading-font-family);
   font-size: 20px;
   line-height: 2;
   color: var(--grey-color);
