--- a/src/styles.css
+++ b/src/styles.css
@@ -94,6 +94,33 @@ p {
   background: var(--sunshine-color);
 }
 
+nav {
+  padding: 20px 0;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: var(--grey-color);
+  transition: all 100ms ease-in-out;
+}
+
+nav a:hover,
+nav li.active a {
+  color: var(--coral-color);
+}
+
 @media (max-width: 768px) {
   h1 {
     font-size: 44px;
@@ -113,5 +140,9 @@ p {
   .content-container {
     text-align: center;
     padding: 0;
+  }
+
+  nav a {
+    font-size: 14px;
   }
 }
